--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cloud_firestore: ^5.6.2
   google_fonts: ^6.2.1
   firebase_storage: ^12.4.1
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
